= Version History =
1.2.3 (2011-11-28):

- fixed: page_handler issue with Elgg 1.8.1

1.2.2 (2011-11-18):

- fixed: css depricated notice
- fixed: IE7 blog image outlining
- changed: making the plugin Elgg 1.8 compatible

1.2.1 (2011-10-13):

- fixed: blog slider widget
- fixed: delete thumbnail on delete blog (#2)
- changed: moved some functions

1.2 (2011-09-12):

- added: widget slider view (#4)
	
1.1.1 (2011-08-18):

- fixed: broken preview mode
- fixed: preview/draft not cleaning up correctly in edit mode

1.1 (2011-07-25):

- added: plugin setting to control strapline in listing
- added: index widget for blog

1.0.1 (2011-05-25) :

- fixed: full blog layout without tags

1.0 (2011-05-24):

- initial version