@@ -36,6 +36,14 @@
 	
 				include(dirname(dirname(__FILE__)) . "/pages/transfer.php");
 				break;
+			case "read":
+				if(!elgg_is_logged_in() && (elgg_get_plugin_setting("advanced_gatekeeper", "blog_tools") != "no")){
+					if(!get_entity($page[1])){
+						gatekeeper();
+					}
+				}
+				return blog_tools_fallback_page_handler($page, $handler);
+				break;
 			default:
 				return blog_tools_fallback_page_handler($page, $handler);
 			break;
