@@ -1,4 +1,8 @@
 = Version History =
+x.x:
+
+- added: advanced gatekeeper, to more easily allow user to access blogs
+
 1.2.3 (2011-11-28):
 
 - fixed: page_handler issue with Elgg 1.8.1
